--- a/bunnylol/db/README
+++ b/bunnylol/db/README
@@ -11,9 +11,10 @@ API
 
 engine = await create_engine(dsn)
 
-async with engine.connect() as conn:
+async with engine.acquire() as conn:
     await conn.execute(tbl.insert().values(val='abc'))
     async for row in conn.execute(tbl.select()):
         print(row.id, row.val)
 
 engine.close()
+await engine.wait_closed()
